--- a/_posts/python/subplots/2015-07-27-make-subplots-title.html
+++ b/_posts/python/subplots/2015-07-27-make-subplots-title.html
@@ -13,26 +13,10 @@ from plotly import tools
 import plotly.plotly as py
 from plotly.graph_objs import *
 
-trace1 = Scatter(
-    x=[1, 2, 3],
-    y=[4, 5, 6]
-)
-trace2 = Scatter(
-    x=[20, 30, 40],
-    y=[50, 60, 70],
-    xaxis='x2',
-    yaxis='y2'
-)
-trace3 = Scatter(
-    x=[300, 400, 500],
-    y=[600, 700, 800],
-    xaxis='x3',
-    yaxis='y3'
-)
-trace4 = Scatter(
-    x=[4000, 5000, 6000],
-    y=[7000, 8000, 9000],
-)
+trace1 = Scatter(x=[1, 2, 3], y=[4, 5, 6])
+trace2 = Scatter(x=[20, 30, 40], y=[50, 60, 70])
+trace3 = Scatter(x=[300, 400, 500], y=[600, 700, 800])
+trace4 = Scatter(x=[4000, 5000, 6000], y=[7000, 8000, 9000])
 
 fig = tools.make_subplots(rows=2, cols=2, subplot_titles=('Plot 1', 'Plot 2',
                                                           'Plot 3', 'Plot 4'))
@@ -46,5 +30,3 @@ fig['layout'].update(height=600, width=600, title='Multiple Subplots' +
                                                   ' with Titles')
 
 plot_url = py.plot(fig, filename='make-subplots-multiple-with-title')
-
-
