--- a/_posts/2015-04-05-plotly_js-index.html
+++ b/_posts/2015-04-05-plotly_js-index.html
@@ -130,31 +130,19 @@ $(function() {
   <!-- menu for small screens - is shown through a media query at some screenwidth -->
 
   <div class="js-splash--navigation-inline row" style="width: 100%">
+    <div style="width: 49%; float: left;">
       <div class="js-splash--navigation-section-title">Quick Start</div>
       <div class="js-splash--navigation-item-container">
-        <a href="https://plot.ly/javascript/getting-started" class="js-splash--navigation-item">Getting Started</a>
+        <a href="https://plot.ly/javascript/getting-started" class="js-splash--navigation-item">Introduction</a>
         <a href="https://cdn.plot.ly/plotly-latest.min.js" class="js-splash--navigation-item">CDN</a>
       </div>
 
       <div class="js-splash--navigation-section-title">Reference</div>
       <div class="js-splash--navigation-item-container">
-        <a href="https://plot.ly/javascript/reference" class="js-splash--navigation-item">Plot Schema</a>
-        <a href="https://plot.ly/javascript/plotlyjs-function-reference/" class="js-splash--navigation-item">Function Reference</a>
+        <a href="https://plot.ly/javascript/reference" class="js-splash--navigation-item">Attributes</a>
+        <a href="https://plot.ly/javascript/plotlyjs-function-reference/" class="js-splash--navigation-item">Functions</a>
       </div>
-    </div>
 
-    <div style="width: 33%; float: left;">
-      <div class="js-splash--navigation-section-title">Examples</div>
-      <div class="js-splash--navigation-item-container">
-        <a href="#basic-charts" class="js-splash--navigation-item">2D</a>
-        <a href="#3d-charts" class="js-splash--navigation-item">3D</a>
-        <a href="#maps" class="js-splash--navigation-item">Maps</a>
-        <a href="#chart-events" class="js-splash--navigation-item">Events</a>
-        <a href="#layout-options" class="js-splash--navigation-item">Layout</a>
-      </div>
-    </div>
-
-    <div style="width: 33%; float: left;">
       <!--
       <div class="js-splash--navigation-section-title">Community</div>
       <div class="js-splash--navigation-item-container">
@@ -169,6 +157,20 @@ $(function() {
         <a href="http://codepen.io/plotly" class="js-splash--navigation-item">CodePen</a>
       </div>
     </div>
+
+    <div style="width: 50%; float: left;">
+      <div class="js-splash--navigation-section-title">Examples</div>
+      <div class="js-splash--navigation-item-container">
+      <a href="#basic-charts" class="js-splash--navigation-item">Basic</a>
+      <a href="#statistical-charts" class="js-splash--navigation-item">Statistical</a>
+      <a href="#scientific-charts" class="js-splash--navigation-item">Scientific</a>
+        <a href="#3d-charts" class="js-splash--navigation-item">3D</a>
+        <a href="#maps" class="js-splash--navigation-item">Maps</a>
+        <a href="#chart-events" class="js-splash--navigation-item">Events</a>
+        <a href="#layout-options" class="js-splash--navigation-item">Layout</a>
+      </div>
+    </div>
+
   </div>
 
   <div class="graph js-splash--responsive-chart-js" class="graph" style="height: 80vh;" id="my-graph"></div>
