Update click example to not use jQuery, and change layout of click annotation example

--- a/_posts/plotly_js/callbacks-click/2015-04-09-click.html
+++ b/_posts/plotly_js/callbacks-click/2015-04-09-click.html
@@ -18,12 +18,13 @@ var N = 16,
 
 Plotly.newPlot('myDiv', data, layout);
 
-$('#myDiv').bind('plotly_click',
-    function(event,data){
-        var pts = '';
-        for(var i=0; i&lt;data.points.length; i++){
-            pts = 'x = '+data.points[i].x +'\ny = '+
-                data.points[i].y.toPrecision(4) + '\n\n';
-        }
+myPlot = document.getElementById('myDiv');
+
+myPlot.on('plotly_click', function(data){
+    var pts = '';
+    for(var i=0; i&lt;data.points.length; i++){
+        pts = 'x = '+data.points[i].x +'\ny = '+
+            data.points[i].y.toPrecision(4) + '\n\n';
+    }
     alert('Closest point clicked:\n\n'+pts);
 });
