Update hover code examples to not use jquery

--- a/_posts/plotly_js/callbacks-click/2015-04-09-click.html
+++ b/_posts/plotly_js/callbacks-click/2015-04-09-click.html
@@ -6,7 +6,8 @@ suite: click-events
 sitemap: false
 order: 0
 ---
-var N = 16,
+var myPlot = document.getElementById('myDiv'),
+    N = 16,
     x = d3.range(N),
     y = d3.range(N).map( d3.random.normal() ),
     data = [ { x:x, y:y, type:'scatter',
@@ -17,8 +18,6 @@ var N = 16,
      };
 
 Plotly.newPlot('myDiv', data, layout);
-
-myPlot = document.getElementById('myDiv');
 
 myPlot.on('plotly_click', function(data){
     var pts = '';
