--- a/_posts/plotly_js/callbacks-hover/2015-04-09-hover-manual.html
+++ b/_posts/plotly_js/callbacks-hover/2015-04-09-hover-manual.html
@@ -6,7 +6,9 @@ suite: hover-events
 sitemap: false
 order: 1
 ---
-var N = 16,
+var myPlot = document.getElementById('myDiv'),
+    hoverButton = document.getElementById('hoverbutton'),
+    N = 16,
     x = d3.range(N),
     y1 = d3.range(N).map( d3.random.normal() ),
     y2 = d3.range(N).map( d3.random.normal() ),
@@ -16,15 +18,16 @@ var N = 16,
         mode:'markers', marker:{size:16} } ];
     layout = { 
         hovermode:'closest',
-        title:'Hover on Points'
+        title:'Click "Go" button to trigger hover'
      };
 
-Plotly.newPlot('myDiv', data, layout);
+Plotly.plot('myDiv', data, layout);
 
-$('#myDiv')
-    .bind('plotly_beforehover',function(){return false; })
+myPlot.on('plotly_beforehover',function(){ 
+    return false; 
+});
 
-$('#hoverbutton button').click(function(){
+hoverButton.addEventListener('click', function(){
     var curve1 = Math.floor(Math.random()*2),
         curve2 = Math.floor(Math.random()*2),
         point1 = Math.floor(Math.random()*14),
