--- a/_posts/plotly_js/callbacks-hover/2015-12-02-hover-complex.html
+++ b/_posts/plotly_js/callbacks-hover/2015-12-02-hover-complex.html
@@ -1,6 +1,6 @@
 ---
 name: Combined Click and Hover Events
-plot_url: https://codepen.io/plotly/embed/eJOyej/?height=540&theme-id=15263&default-tab=result
+plot_url: https://codepen.io/plotly/embed/eJOyej/?height=520&theme-id=15263&default-tab=result
 language: plotly_js
 suite: hover-events
 sitemap: false
@@ -8,3 +8,5 @@ arrangement: horizontal
 height: 700
 order: 3
 ---
+
+This is a more complex example that uses both hover, and click events to display traces. Take a look in the codepen javascript!
