--- a/_posts/2015-07-26-index.html
+++ b/_posts/2015-07-26-index.html
@@ -58,7 +58,7 @@ permalink: /api/
 				<div class="row">
 					<a href="/python/"><div class="two columns offset-by-two categories-apis" onmouseover="movingInImgOp(pythonapi_img, pythonapi_text)" onmouseout="movingOutImgOp(pythonapi_img, pythonapi_text)">
 						<div id="pythonapi_img">
-							<img src="{{site.staticurl}}/images/python-small.png" alt="python">
+							<img src="http://images.plot.ly/language-icons/api-home/python-logo.png" alt="python">
 						</div>
 						<div id="pythonapi_text" class="titlecenterapi" style="display:none;">
 							<h6>Plotly Python API</h6>
@@ -66,7 +66,7 @@ permalink: /api/
 					</div></a>
 					<a href="/matlab/"><div class="two columns categories-apis" onmouseover="movingInImgOp(matlabapi_img, matlabapi_text)" onmouseout="movingOutImgOp(matlabapi_img, matlabapi_text)">
 						<div id="matlabapi_img">
-							<img src="{{site.staticurl}}/images/MATLAB-small.png" alt="MATLAB">
+							<img src="http://images.plot.ly/language-icons/api-home/matlab-logo.png" alt="MATLAB">
 						</div>
 						<div id="matlabapi_text" class="titlecenterapi" style="display:none;">
 							<h6>Plotly MATLAB API</h6>
@@ -74,7 +74,7 @@ permalink: /api/
 					</div></a>
 					<a href="/r/"><div class="two columns categories-apis" onmouseover="movingInImgOp(r_api_img, r_api_text)" onmouseout="movingOutImgOp(r_api_img, r_api_text)">
 						<div id="r_api_img">
-							<img src="{{site.staticurl}}/images/r-small.png" alt="R" style="width:100px;">
+							<img src="http://images.plot.ly/language-icons/api-home/r-logo.png" alt="R">
 						</div>
 						<div id="r_api_text" class="titlecenterapi" style="display:none;">
 							<h6>Plotly R API</h6>
@@ -82,7 +82,7 @@ permalink: /api/
 					</div></a>
 					<a href="/javascript/"><div class="two columns categories-apis" onmouseover="movingInImgOp(js_api_img, js_api_text)" onmouseout="movingOutImgOp(js_api_img, js_api_text)">
 						<div id="js_api_img">
-							<img src="http://i.stack.imgur.com/Mmww2.png" alt="Plotly.js" style="max-width:90px;">
+							<img src="http://images.plot.ly/language-icons/api-home/js-logo.png" alt="Plotly.js">
 						</div>
 						<div id="js_api_text" class="titlecenterapi" style="display:none;">
 							<h6></h6>
