--- a/_posts/python/filled-chord/2015-06-30-filled-chord.html
+++ b/_posts/python/filled-chord/2015-06-30-filled-chord.html
@@ -1242,7 +1242,7 @@ If <code>sigma_inv</code> is the inverse permutation of <code>sigma</code>, we g
 <div class=" highlight hl-ipython2"><pre><span class="n">data</span> <span class="o">=</span> <span class="n">Data</span><span class="p">(</span><span class="n">ideograms</span><span class="o">+</span><span class="n">ribbon_info</span><span class="p">)</span>
 <span class="n">fig</span> <span class="o">=</span> <span class="n">Figure</span><span class="p">(</span><span class="n">data</span><span class="o">=</span><span class="n">data</span><span class="p">,</span> <span class="n">layout</span><span class="o">=</span><span class="n">layout</span><span class="p">)</span>
 
-<span class="n">py</span><span class="o">.</span><span class="n">iplot</span><span class="p">(</span><span class="n">fig</span><span class="p">,</span> <span class="n">filename</span><span class="o">=</span><span class="s">&#39;chord-diagram-Fb&#39;</span><span class="p">)</span> 
+<span class="n">py</span><span class="o">.</span><span class="n">plot</span><span class="p">(</span><span class="n">fig</span><span class="p">,</span> <span class="n">filename</span><span class="o">=</span><span class="s">&#39;chord-diagram-Fb&#39;</span><span class="p">)</span> 
 </pre></div>
 
 </div>
@@ -1256,7 +1256,7 @@ If <code>sigma_inv</code> is the inverse permutation of <code>sigma</code>, we g
 <div class="output_area"><div class="prompt output_prompt">Out[46]:</div>
 
 <div class="output_html rendered_html output_subarea output_execute_result">
-<iframe id="igraph" scrolling="no" style="border:none;"seamless="seamless" src="https://plot.ly/~chelsea_lyn/9654.embed" height="525px" width="525px"></iframe>
+<iframe id="igraph" scrolling="no" style="border:none;"seamless="seamless" src="https://plot.ly/~chelsea_lyn/9654.embed" height="525px" width="100%"></iframe>
 </div>
 
 </div>
