--- a/_posts/pandas/line-plots/2016-02-11-4cufflinks-add-linestyle-and-colors.html
+++ b/_posts/pandas/line-plots/2016-02-11-4cufflinks-add-linestyle-and-colors.html
@@ -4,7 +4,7 @@ plot_url: https://plot.ly/~tarzzz/1261
 language: pandas
 suite: line-plots
 arrangement: horizontal
-order: 4
+order: 3
 sitemap: false
 ---
 # Learn about API authentication here: https://plot.ly/pandas/getting-started
@@ -17,14 +17,14 @@ import pandas as pd
 
 cf.set_config_file(offline=False, world_readable=True, theme='ggplot')
 
+df = cf.datagen.lines()
+df.head()
+
+df.iplot(kind='scatter', filename='cufflinks/cf-simple-line')
+
 # Create a simple dataframe..
 df = cf.datagen.lines(3)
-df.head()
 
 c = ['red', 'blue', 'black']
 
-df.iplot(kind='scatter',                                             # plot type
-         mode='lines',                                               # set mode to 'lines', 'markers' or 'lines+markers'
-         colors=c,                                                   # List of colors for lines..
-         dash='solid',                                               # Line type. Can be 'solid', 'dot', 'dash', or 'dotdash'
-         filename='cufflinks/line-style-and-color')
+plot_url = df.iplot(kind='scatter', mode='lines', colors=c, dash='solid', filename='cufflinks/line-style-and-color')
