--- a/_posts/plotly_js/range-slider/2016-04-04-range-slider_plotly_js_index.html
+++ b/_posts/plotly_js/range-slider/2016-04-04-range-slider_plotly_js_index.html
@@ -10,6 +10,7 @@ page_type: example_index
 has_thumbnail: true
 display_as: basic
 order: 1
+redirect_from: javascript-graphing-library/range-slider/
 ---
 {% assign examples = site.posts | where:"language","plotly_js" | where:"suite","range-slider" | sort: "order" %}
 {% include auto_examples.html examples=examples %}
