--- a/_posts/r/callbacks-click/2015-04-09-click_index.html
+++ b/_posts/r/callbacks-click/2015-04-09-click_index.html
@@ -2,7 +2,7 @@
 title: Binding to Click Events with JavaScript | Examples | Plotly
 name: Click Events
 permalink: r/click-events/
-description: How to bind callback functions to click events in Python charts with JavaScript. 
+description: How to bind callback functions to click events in R charts with JavaScript. 
 layout: base
 thumbnail: thumbnail/click.jpg
 language: r
