--- a/_posts/python/3d-clusters/2015-06-30-3d-clusters.html
+++ b/_posts/python/3d-clusters/2015-06-30-3d-clusters.html
@@ -25,7 +25,7 @@ order: 11
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[1]:</div>
+<div class="prompt input_prompt">In&nbsp;[5]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython2"><pre><span class="kn">import</span> <span class="nn">plotly.plotly</span> <span class="kn">as</span> <span class="nn">py</span>
@@ -37,7 +37,7 @@ order: 11
 <span class="n">scatter</span> <span class="o">=</span> <span class="nb">dict</span><span class="p">(</span>
     <span class="n">mode</span> <span class="o">=</span> <span class="s">&quot;markers&quot;</span><span class="p">,</span>
     <span class="n">name</span> <span class="o">=</span> <span class="s">&quot;y&quot;</span><span class="p">,</span>
-    <span class="nb">type</span> <span class="o">=</span> <span class="s">&quot;scatter3d&quot;</span><span class="p">,</span>
+    <span class="nb">type</span> <span class="o">=</span> <span class="s">&quot;scatter3d&quot;</span><span class="p">,</span>    
     <span class="n">x</span> <span class="o">=</span> <span class="n">df</span><span class="p">[</span><span class="s">&#39;x&#39;</span><span class="p">],</span> <span class="n">y</span> <span class="o">=</span> <span class="n">df</span><span class="p">[</span><span class="s">&#39;y&#39;</span><span class="p">],</span> <span class="n">z</span> <span class="o">=</span> <span class="n">df</span><span class="p">[</span><span class="s">&#39;z&#39;</span><span class="p">],</span>
     <span class="n">marker</span> <span class="o">=</span> <span class="nb">dict</span><span class="p">(</span> <span class="n">size</span><span class="o">=</span><span class="mi">2</span><span class="p">,</span> <span class="n">color</span><span class="o">=</span><span class="s">&quot;rgb(23, 190, 207)&quot;</span> <span class="p">)</span>
 <span class="p">)</span>
@@ -45,7 +45,7 @@ order: 11
     <span class="n">alphahull</span> <span class="o">=</span> <span class="mi">7</span><span class="p">,</span>
     <span class="n">name</span> <span class="o">=</span> <span class="s">&quot;y&quot;</span><span class="p">,</span>
     <span class="n">opacity</span> <span class="o">=</span> <span class="mf">0.1</span><span class="p">,</span>
-    <span class="nb">type</span> <span class="o">=</span> <span class="s">&quot;mesh3d&quot;</span><span class="p">,</span>
+    <span class="nb">type</span> <span class="o">=</span> <span class="s">&quot;mesh3d&quot;</span><span class="p">,</span>    
     <span class="n">x</span> <span class="o">=</span> <span class="n">df</span><span class="p">[</span><span class="s">&#39;x&#39;</span><span class="p">],</span> <span class="n">y</span> <span class="o">=</span> <span class="n">df</span><span class="p">[</span><span class="s">&#39;y&#39;</span><span class="p">],</span> <span class="n">z</span> <span class="o">=</span> <span class="n">df</span><span class="p">[</span><span class="s">&#39;z&#39;</span><span class="p">]</span>
 <span class="p">)</span>
 <span class="n">layout</span> <span class="o">=</span> <span class="nb">dict</span><span class="p">(</span>
@@ -58,10 +58,25 @@ order: 11
 <span class="p">)</span>
 <span class="n">fig</span> <span class="o">=</span> <span class="nb">dict</span><span class="p">(</span> <span class="n">data</span><span class="o">=</span><span class="p">[</span><span class="n">scatter</span><span class="p">,</span> <span class="n">clusters</span><span class="p">],</span> <span class="n">layout</span><span class="o">=</span><span class="n">layout</span> <span class="p">)</span>
 <span class="c"># Use py.iplot() for IPython notebook</span>
-<span class="n">url</span> <span class="o">=</span> <span class="n">py</span><span class="o">.</span><span class="n">plot</span><span class="p">(</span><span class="n">fig</span><span class="p">,</span> <span class="n">filename</span><span class="o">=</span><span class="s">&#39;3d point clustering&#39;</span><span class="p">)</span>
+<span class="n">py</span><span class="o">.</span><span class="n">iplot</span><span class="p">(</span><span class="n">fig</span><span class="p">,</span> <span class="n">filename</span><span class="o">=</span><span class="s">&#39;3d point clustering&#39;</span><span class="p">)</span>
 </pre></div>
 
 </div>
+</div>
+</div>
+
+<div class="output_wrapper">
+<div class="output">
+
+
+<div class="output_area"><div class="prompt output_prompt">Out[5]:</div>
+
+<div class="output_html rendered_html output_subarea output_execute_result">
+<iframe id="igraph" scrolling="no" style="border:none;" seamless="seamless" src="https://plot.ly/~demo_account/94.embed" height="525px" width="100%"></iframe>
+</div>
+
+</div>
+
 </div>
 </div>
 
@@ -80,7 +95,7 @@ order: 11
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>See <a href="https://plot.ly/python/reference/#surface">https://plot.ly/python/reference/#surface</a> for more information regarding subplots!</p>
+<p>See <a href="https://plot.ly/python/reference/">https://plot.ly/python/reference/</a> for more information regarding subplots!</p>
 
 </div>
 </div>
