--- a/_posts/python/colorscales/2015-04-09-colorscales_python_index.html
+++ b/_posts/python/colorscales/2015-04-09-colorscales_python_index.html
@@ -10,6 +10,7 @@ page_type: example_index
 has_thumbnail: true
 display_as: scientific
 order: 18
+redirect_from: /python/heatmap-and-colorscales-colorscales/
 ---
 {% assign examples = site.posts | where:"language","python" | where:"suite","colorscales" | sort: "order" %}
 {% include auto_examples.html examples=examples %}
